Add authentication features with user registration, login, and email verification

--- a/auth-service/auth/pom.xml
+++ b/auth-service/auth/pom.xml
@@ -69,6 +69,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.32</version> <!-- or latest -->
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -80,6 +81,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
